--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,26 @@
 {
+  "city": {
+    "home": {
+      "welcome": {
+        "lineA": "Welcome to UFPC",
+        "lineB": "United Federation of Planets Citizenship"
+      }
+    },
+    "nav": {
+      "about": "About",
+      "home": "Home",
+      "market": {
+        "civil": "Civil Use",
+        "military": "Military Use",
+        "title": "Market"
+      },
+      "work": {
+        "findwork": "Work",
+        "hire": "Hire",
+        "title": "Work"
+      }
+    }
+  },
   "home": {
     "index": "Home"
   },
